--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "dependencies": {
+        "dexie": "^4.0.10",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "zustand": "^5.0.3",
         "recharts": "^2.15.0",
-        "dexie": "^4.0.10"
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@tailwindcss/vite": "^4.0.0",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
@@ -25,10 +28,10 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
+        "tailwindcss": "^4.0.0",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.22.0",
         "vite": "^6.1.0",
-        "tailwindcss": "^4.0.0",
-        "@tailwindcss/vite": "^4.0.0"
+        "vitest": "^4.0.18"
     }
 }
