--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest run",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "valuation": "tsx scripts/run-valuation.ts"
     },
     "dependencies": {
         "dexie": "^4.0.10",
@@ -29,6 +30,7 @@
         "eslint-plugin-react-refresh": "^0.4.18",
         "globals": "^15.14.0",
         "tailwindcss": "^4.0.0",
+        "tsx": "^4.19.2",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.22.0",
         "vite": "^6.1.0",
