--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "dexie": "^4.0.10",
+        "@supabase/supabase-js": "^2.49.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "recharts": "^2.15.0",
