--- a/dcf-agent-api/package.json
+++ b/dcf-agent-api/package.json
@@ -11,13 +11,14 @@
     "openapi:generate": "tsx scripts/generate-openapi.ts"
   },
   "dependencies": {
-    "@dcf/core": "file:../packages/dcf-core",
+    "@textcat/dcf-core": "file:../packages/dcf-core",
     "@hono/zod-openapi": "^0.19.2",
     "hono": "^4.6.10",
     "yaml": "^2.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@cloudflare/workers-types": "^4.20260201.0",
     "tsx": "^4.19.2",
     "typescript": "~5.7.3",
