--- a/packages/dcf-core/.npmrc.example
+++ b/packages/dcf-core/.npmrc.example
@@ -1,2 +1,2 @@
-@dcf:registry=https://npm.pkg.github.com
+@textcat:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GITHUB_PACKAGES_TOKEN}
